[package]
name = "phase2-scout"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution prototyping engine"
publish = false
edition = "2018"

[dependencies]
wasmi = { path = "../wasmi" } # use this branch for profiling https://github.com/cdetrio/wasmi/commits/profile-invocations-rolluprs-hostfuncs
rustc-hex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.7"
primitive-types = "0.6"
crunchy = "0.2.1"
byteorder = { version = "1.0", features = ["i128"] }
