[package]
name = "sha3hasher"
version = "0.0.0"
license = "Apache-2.0"
repository = "https://github.com/ewasm/scout"
description = "Eth 2.0 Phase 2 execution script: sha3hasher"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
tiny-keccak = { path = "/Users/mbpro/dev_ewasm/tiny-keccak" }

[dependencies.ewasm_api]
git = "https://github.com/ewasm/ewasm-rust-api"
rev = "1c01982"
default-features = false
features = ["std", "eth2", "qimalloc"]

[profile.release]
lto = true
debug = false
